fixed - dark background not showing in print

--- a/src/features/CV/cv.css
+++ b/src/features/CV/cv.css
@@ -1,7 +1,8 @@
-/*
+
 body * {
-    border: solid black 1px;
-}*/
+      -webkit-print-color-adjust:exact !important;
+        print-color-adjust:exact !important;
+}
 
 @media print {
     body * {
@@ -15,6 +16,7 @@ body * {
         left: 0;
         top: 0;
     }
+    
 }
 
 h4, h3, h2, h1, p {
@@ -42,13 +44,13 @@ article{
 
 .item1 {
     grid-area:image; 
-    background-color: gray; 
+    background-color: darkslategrey !important; 
 }
 .item2 {grid-area:name;}
 .item3 {grid-area:contact;}
-.item4 {grid-area:about; background-color: gray;}
+.item4 {grid-area:about; background-color: darkslategrey !important;}
 .item5 {grid-area:work; border-top: solid 1px gray;}
-.item6 {grid-area:social; background-color: gray; border-top: solid 1px lightgray;}
+.item6 {grid-area:social; background-color: darkslategrey !important; border-top: solid 1px lightgray ;}
 .item7 {grid-area:education; border-top: solid 1px gray;}
 .item8 {grid-area:references;}
 .empty {grid-area:empty}
